# event-planner

./: .gitignore
backend/: .env  Cargo.toml
backend/src/: config.rs  main.rs  models.rs  testing.rs  types.rs  util.rs
backend/src/handlers/: auth.rs  mod.rs  monitoring.rs  organization.rs  person.rs
frontend/: package-lock.json
frontend/src/: App.svelte  Login.svelte  app.css  stores.js
sql/: schema.sql
