[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = [ "rustls" ] }
actix-web-httpauth = "0.8"
argon2 = "0.5"
config = "0.13"
chrono = { version = "0.4", features = [ "serde" ] }
dotenvy = "0.15"
futures-util = "0.3"
jsonwebtoken = "8"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
totp-rs = { version = "5", features = [ "gen_secret", "zeroize" ] }
